--- a/src/pages/Setting/style.scss
+++ b/src/pages/Setting/style.scss
@@ -2,3 +2,61 @@
     background-color: #fff !important;
     font-family: sans-serif;
 }
+.yana{
+    width: 340px;
+height: 44px;
+transform: rotate(-0.106deg);
+flex-shrink: 0;
+border-radius: 4px;
+background: #F3F6F9;
+}
+
+.yanami{
+    width: 708px;
+height: 44px;
+flex-shrink: 0;
+border-radius: 4px;
+background: #F3F6F9;
+}
+
+.heybol{
+    position:relative;
+   right: -530px;
+    
+}
+.widid{
+    width: 340px;
+}
+.segg{
+    color: #212121;
+font-family: Poppins;
+font-size: 18px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+}
+
+.google{
+    color: #464E5F !important;
+font-family: Poppins;
+font-size: 13px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
+
+.heybola{
+    position:relative;
+    right: -510px;
+    width: 200px;
+}
+.ant-upload{
+    width: 50px;
+    height: 50px;
+    background: re;
+}
+.fdf{
+    position: relative;
+    top: -38px;
+    right: -240%;
+}
